--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,19 @@ repos:
       rev: 19.10b0
       hooks:
       - id: black
-        args: ["--skip-string-normalization"]
+        args: ["--line-length", "100", "--skip-string-normalization"]
 
 
   -   repo: https://gitlab.com/pycqa/flake8
       rev: 3.8.1
       hooks:
       - id: flake8
+
+  -   repo: https://github.com/asottile/seed-isort-config
+      rev: v2.1.1
+      hooks:
+      -   id: seed-isort-config
+  -   repo: https://github.com/pre-commit/mirrors-isort
+      rev: v4.3.21
+      hooks:
+      -   id: isort
