--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,6 +46,12 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-      - name: Conda info
+      - name: Set up conda environment
         shell: bash -l {0}
-        run: conda info
+        run: |
+          python -m pip install -e .
+          conda list
+
+      - name: Smoke Test
+        run: |
+         repo2singularity https://github.com/norvig/pytudes
