--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,6 @@ jobs:
           conda list
 
       - name: Smoke Test
-        shell: /bin/bash -e {0}
+        shell: bash -l {0}
         run: |
          repo2singularity https://github.com/norvig/pytudes
