--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
         run: |
          repo2singularity --push https://github.com/binder-examples/continuous-build
 
-      - name: Pull Test
-        shell: bash -l {0}
-        run: |
-         singularity pull library://andersy005/test/r2dhttps-3a-2f-2fgithub-2ecom-2fbinder-2dexamples-2fcontinuous-2dbuild-2egit17f9fa8
+      # - name: Pull Test
+      #   shell: bash -l {0}
+      #   run: |
+      #    singularity pull library://andersy005/test/r2dhttps-3a-2f-2fgithub-2ecom-2fbinder-2dexamples-2fcontinuous-2dbuild-2egit17f9fa8:latest
