--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ select = B,C,E,F,W,T4,B9
 
 [isort]
 known_first_party=repo2singularity
-known_third_party=pkg_resources,repo2docker,setuptools,typer
+known_third_party=pkg_resources,repo2docker,setuptools,spython,typer
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
