--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,81 +2,28 @@ name: CI
 on:
   push:
     branches:
-    - '*'
+      - main
   pull_request:
     branches:
-    - '*'
+      - main
+  schedule:
+    - cron: "0 0 * * *" # Daily “At 00:00”
+  workflow_dispatch: # allows you to trigger manually
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
-    name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
+    name: build
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-latest']
-        python-version: ['3.6', '3.7', '3.8']
+        python-version: ["3.7", "3.8", "3.9"]
     steps:
-      - name: Install apt-get dependencies
-        run: |
-          sudo apt-get update && sudo apt-get install -y \
-          build-essential \
-          libssl-dev \
-          uuid-dev \
-          libgpgme11-dev \
-          squashfs-tools \
-          libseccomp-dev \
-          wget \
-          pkg-config \
-          git \
-          cryptsetup
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.13.1'
-      - name: Install Singularity
-        run: |
-          export VERSION=3.5.3 && # adjust this as necessary \
-          wget https://github.com/sylabs/singularity/releases/download/v${VERSION}/singularity-${VERSION}.tar.gz && \
-          tar -xzf singularity-${VERSION}.tar.gz && \
-          cd singularity && \
-          ./mconfig && \
-          make -C builddir && \
-          sudo make -C builddir install
-      - name: Decrypt sylabs token
-        run: ./.github/scripts/decrypt_secret.sh
-        env:
-          SYLABS_TOKEN: ${{ secrets.SYLABS_TOKEN }}
-
-      - name: Ensure the token in properly decrypted
-        run: |
-         singularity remote login --tokenfile $HOME/secrets/sylabs-token
-
-      - uses: goanpeca/setup-miniconda@v1
-        with:
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
-      - name: Set up conda environment
-        shell: bash -l {0}
-        run: |
-          python -m pip install -e .
-          conda list
-
-      - name: Build Test
-        shell: bash -l {0}
-        run: |
-         repo2singularity https://github.com/binder-examples/continuous-build
-
-      - name: Inspect Built Images
-        shell: bash -l {0}
-        run: |
-          cd ~/.singularity/cache/repo2singularity
-          for image in *; do
-             singularity inspect "$image";
-          done
-
-
-      # - name: Pull Test
-      #   shell: bash -l {0}
-      #   run: |
-      #    singularity pull library://andersy005/test/binder-examples-continuous-build:latest
