--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,31 +1,45 @@
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.1.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-docstring-first
+      - id: check-json
+      - id: check-yaml
+      - id: double-quote-string-fixer
+      - id: debug-statements
+      - id: mixed-line-ending
 
-  -   repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v2.5.0
-      hooks:
-      -   id: trailing-whitespace
-      -   id: end-of-file-fixer
-      -   id: check-docstring-first
-      -   id: check-yaml
-      -   id: double-quote-string-fixer
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.31.0
+    hooks:
+      - id: pyupgrade
+        args:
+          - "--py38-plus"
 
-  -   repo: https://github.com/ambv/black
-      rev: 19.10b0
-      hooks:
+  - repo: https://github.com/psf/black
+    rev: 22.1.0
+    hooks:
       - id: black
-        args: ["--line-length", "100", "--skip-string-normalization"]
+      - id: black-jupyter
 
+  - repo: https://github.com/keewis/blackdoc
+    rev: v0.3.4
+    hooks:
+      - id: blackdoc
 
-  -   repo: https://gitlab.com/pycqa/flake8
-      rev: 3.8.1
-      hooks:
+  - repo: https://github.com/PyCQA/flake8
+    rev: 4.0.1
+    hooks:
       - id: flake8
 
-  -   repo: https://github.com/asottile/seed-isort-config
-      rev: v2.1.1
-      hooks:
-      -   id: seed-isort-config
-  -   repo: https://github.com/pre-commit/mirrors-isort
-      rev: v4.3.21
-      hooks:
-      -   id: isort
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.5.1
+    hooks:
+      - id: prettier
