--- a/repo2singularity/config.yaml
+++ b/repo2singularity/config.yaml
@@ -1,7 +1,6 @@
-singularity_in_docker:
-  image: kaczmarj/singularity
-  tag: 3.8.6
-
+apptainer_in_docker:
+  image: kaczmarj/apptainer
+  tag: 1.0.0
 base_image:
   image: pangeo/base-image
   tag: 2022.02.04
