--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9"]
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v2
+      - name: Create conda environment
+        uses: mamba-org/provision-with-micromamba@main
+        with:
+          micromamba-version: "latest"
+          environment-name: repo2apptainer-dev
+          environment-file: ci/environment.yml
+          extra-specs: |
+            - python=${{ matrix.python-version }}
+
+      - name: Install repo2apptainer
+        run: |
+          python -m pip install -e . --no-deps --force-reinstall
+          conda list
+
+      - name: Run tests
+        run: |
+          repo2apptainer --help
