Remove environment name

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: Create conda environment
         uses: mamba-org/provision-with-micromamba@main
         with:
+          cache-env: true
           micromamba-version: "latest"
-          environment-name: repo2apptainer-dev
           environment-file: ci/environment.yml
           extra-specs: |
             - python=${{ matrix.python-version }}
