--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-jupyter-repo2docker
-requests
-tqdm
-typer
+donfig>=0.7.0
+jupyter-repo2docker>=2022.2.0
+pydantic>=1.9.0
+rich>=11.2.0
+typer>=0.4.0
